Fix some sizing and spacing

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -67,7 +67,7 @@ h1 {
   font-weight: normal;
   font-size: 34px;
   color: #000;
-  margin-bottom: 1em;
+  margin-bottom: 28px;
 
   &.page-title {
     width: @pageTitleWidth;
